<resources>
    <string name="app_name">Flight Tracker</string>
    <string name="flight_no">Flight No:</string>
    <string name="arrival_airport">Arrival Airport:</string>
    <string name="flight_status">Flight Status:</string>
    <string name="search">Search</string>
    <string name="hint_airport_code">Enter airport Code</string>
    <string name="missing">Missing</string>
    <string name="flight_tracker">Flight Tracker</string>
    <string name="currency_convertor">Currency Converter</string>
    <string name="trivia_question">Trivia Question</string>
    <string name="bear_image">Bear Image</string>
    <string name="help">Help</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="main_help_title">Search Airport by IATA code</string>
    <string name="main_help_message">Type the IATA airport code to get a list of flights</string>
    <string name="main_positive_button_label">Ok</string>
    <string name="main_negative_button_label">Cancel\n</string>
    <string name="hint_airport_code_input">Airport code is require</string>
    <string name="airport_code_warning">Please enter Airport code</string>
    <string name="no_internet">No internet connection. Please check your network settings.</string>
    <string name="ok">Ok</string>
    <string name="no_data_found">No flights found for the given airport code.</string>
    <string name="api_error">Error occurred while fetching data</string>
    <string name="cancel">Cancel</string>
    <string name="terimal">Terminal:</string>
    <string name="gate">Gate:</string>
    <string name="delay">Delay:</string>
    <string name="departure_airport">Departure Airport</string>
    <string name="save_to_favourite">Save to favourite</string>
    <string name="add_into_favourite" >Add into favourite successfully</string>
    <string name="no_record_found">Sorry! No Record in Favourite</string>
    <string name="api_server_error">Error occurred while fetching data: </string>
    <string name="do_you_want_delete_record">"Do you want to delete the record on "</string>
    <string name="please_confirm">Please Confirm\n</string>
    <string name="yes">Yes\n</string>
    <string name="selected_record_deleted_successfully">Selected Record Deleted Successfully</string>
    <string name="no_flight_found_airport_code">No flights found for the given airport code.</string>
    <string name="entry_help_title">Please Change the as per you understanding</string>
    <string name="entry_help_detail">Please Change the as per you understanding</string>
    <string name="favourite_help_title">Change as per your understanding\n</string>
    <string name="favourite_help_message">Change As per your understanding\n</string>
    <string name="detail_help_message">Change as per your understanding\n</string>
    <string name="detail_help_title">Change as per your understanding</string>
    <string name="delete">Delete</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="hello_message">Hello world!</string>
    <string name="button_message">I\'mbutton</string>
    <string name="editmessage" >I\'m an EditText</string>
    <string name="hinttext">Write Something else</string>
    <string name="message_goes_here">Message goes here</string>
    <string name="time_goes_here">Time goes here</string>
    <string name="todo">TODO</string>
    <string name="response">Message goes here1</string>
    <string name="send">Time goes here</string>
    <string name="der">TODO</string>
    <string name="Button1st">send</string>
    <string name="TextView">1st Text View</string>
    <string name="CAD">CAD</string>
    <string name="TextView2">2nd Text View</string>
    <string name="TextView3">doosra Text sanket</string>
    <string name="AUD">AUD</string>
</resources>