<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/message"
        android:layout_width="103dp"
        android:layout_height="30dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="24dp"
        android:text="@string/response"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="84dp"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="89dp"
        android:layout_height="71dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/der"
        app:layout_constraintEnd_toStartOf="@+id/message"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/australian" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

