<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/message"
            android:layout_width="135dp"
            android:layout_height="62dp"
            android:layout_marginStart="132dp"
            android:layout_marginBottom="508dp"
            android:text="@string/message_goes_here"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/time"
            android:layout_width="134dp"
            android:layout_height="58dp"
            android:layout_marginBottom="412dp"
            android:text="@string/time_goes_here"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/message"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="109dp"
            android:layout_height="80dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="492dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/message"
            app:srcCompat="@drawable/canadian" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>