<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:id="@+id/fragmentLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_secondary">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="720dp"
            android:padding="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="386dp"
                android:layout_height="638dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.625"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/button"
                android:layout_width="81dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="16dp"
                android:background="#673AB7"
                android:backgroundTint="#18AEC1"
                android:text="@string/AUD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="#22A4B5" />

            <EditText
                android:id="@+id/textInput"
                android:layout_width="99dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="Enter amount"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button" />

            <Button
                android:id="@+id/button4"
                android:layout_width="83dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:background="#842A93"
                android:backgroundTint="#1EA8BA"
                android:text="@string/CAD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textInput" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="79dp"
                android:layout_height="55dp"
                android:layout_marginBottom="212dp"
                android:contentDescription="@string/editmessage"
                android:src="@drawable/conversion"
                app:layout_constraintBottom_toTopOf="@+id/rfa"
                app:layout_constraintEnd_toStartOf="@+id/editTextTo"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/editTextFrom"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/basecurrencycode"
                android:layout_width="375dp"
                android:layout_height="44dp"
                android:text="@string/TextView"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/updatedDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/basecurrencyname"
                android:layout_width="371dp"
                android:layout_height="32dp"
                android:layout_marginBottom="4dp"
                android:text="@string/TextView2"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="370dp"
                android:layout_height="24dp"
                android:layout_marginBottom="4dp"
                android:text="@string/TextView3"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/textInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/updatedDate"
                android:layout_width="367dp"
                android:layout_height="28dp"
                android:text="TextView4"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/basecurrencyname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/currencyName"
                android:layout_width="402dp"
                android:layout_height="32dp"
                android:text="TextView7"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/basecurrencycode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/rt"
                android:layout_width="368dp"
                android:layout_height="43dp"
                android:layout_marginBottom="4dp"
                android:text="TextView8"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/currencyName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/rfa"
                android:layout_width="393dp"
                android:layout_height="49dp"
                android:layout_marginBottom="4dp"
                android:text="TextView9"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/rt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.363"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextFrom"
                android:layout_width="83dp"
                android:layout_height="197dp"
                android:ems="10"
                android:gravity="center"
                android:hint="From"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/rfa"
                app:layout_constraintEnd_toStartOf="@+id/editTextTo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextTo"
                app:layout_constraintVertical_bias="0.495" />

            <EditText
                android:id="@+id/editTextTo"
                android:layout_width="78dp"
                android:layout_height="197dp"
                android:ems="10"
                android:gravity="center"
                android:hint="To"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/rfa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editTextFrom"
                app:layout_constraintTop_toTopOf="@+id/editTextFrom"
                app:layout_constraintVertical_bias="0.261" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="86dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:text="SaveButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toEndOf="@+id/button4"
                app:layout_constraintTop_toTopOf="@+id/button4"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>